後端架構更新
Signed-off-by: twinatrick <130625933+twinatrick@users.noreply.github.com>